# safeshare

./: .codecov.yml  .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  FRONTEND.md  LICENSE  README.md  SECURITY.md  docker-compose.postgres-test.yml  docker-compose.traefik.yml  go.mod  go.sum
.claude/agents/: app-testing.md
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  security-scan.yml
cmd/import-file/: README.md  main.go  main_test.go
cmd/migrate-chunks/: README.md  main.go  main_test.go
cmd/migrate-encryption/: README.md  main.go  main_test.go
cmd/safeshare/: main.go  main_test.go
cmd/safeshare-backup/: main.go
deploy/grafana/: safeshare-dashboard.json
docs/: API_REFERENCE.md  API_REFERENCE_FOR_TESTING.md  API_VERSIONING.md  ARCHITECTURE.md  BACKUP_RESTORE.md  CHANGELOG.md  CHUNKED_UPLOAD.md  CI_CD_EXAMPLES.md  CLAUDE.md  CONTRIBUTING.md  FRONTEND.md  HA_DEPLOYMENT.md  HTTP_RANGE_SUPPORT.md  INFRASTRUCTURE_PLANNING.md  MFA_SETUP.md  PATH_A_TESTING.md  PRODUCTION.md  PROMETHEUS.md  README.md  REVERSE_PROXY.md  SDK_INTEGRATION_ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  SSO_SETUP.md  TCP_TUNING.md  TESTING.md  TROUBLESHOOTING.md  UPGRADING.md  VERSION_STRATEGY.md  openapi.yaml
internal/backup/: backup.go  backup_test.go  files.go  manifest.go  restore.go  scheduler.go  scheduler_test.go  sqlite.go  types.go  verify.go
internal/benchmarks/: database_benchmark_test.go  load_stress_test.go  load_test.go  (+1 more)
scripts/: README.md  cleanup-branches.sh  create-release.sh  db-maintenance.sh  merge-pr.sh  new-branch.sh  run-tests-race.sh  run-tests.sh  test-postgres.sh
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: chunked_upload.py  download_file.py  file_management.py  simple_upload.py
sdk/python/safeshare/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: __init__.py  test_client.py
(+310 files in other folders)
