[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safeshare"
version = "0.1.0"
description = "Python SDK for SafeShare file sharing service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "SafeShare Team" }
]
keywords = ["safeshare", "file-sharing", "sdk", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/fjmerc/safeshare"
Documentation = "https://github.com/fjmerc/safeshare/tree/main/sdk/python"
Repository = "https://github.com/fjmerc/safeshare"
Issues = "https://github.com/fjmerc/safeshare/issues"

[tool.hatch.build.targets.wheel]
packages = ["safeshare"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
